# affective_playlists

./: .env.example  .gitignore  CONVENTIONAL_COMMITS.md  DEPLOYMENT.md  QUICKSTART.md  README.md  WEB_FRONTEND_QUICKSTART.md  __init__.py  activate.sh  fix_ssl_certificates.sh  install.sh  main.py  mypy.ini  pyproject.toml  requirements.txt  run_local.py  setup.py  setup.sh  todo
.github/workflows/: ci.yml
4tempers/: TODO.md  prompts.py  quick_test.py  track_metadata.py
data/artist_lists/: disco_funk_soul.json  electronic.json  jazz.json  world.json
docs/: README.md
metad_enr/: __main__.py  config.json  setup.py
openspec/: cli.py
plsort/: QUICKSTART.md  README.md  __init__.py  config.json  plsort.py
shared/: __init__.py  apple_music.py  config.py  logger.py
src/: __init__.py  apple_music.py  apple_music_structure.py  audio_tags.py  celery_app.py  cli_ui.py  config.py  cover_art.py  curation_models.py  curation_service.py  curation_snapshot.py  curation_store.py  databases.py  db.py  http_utils.py  job_store.py  llm_client.py  logger.py  metadata_enrichment.py  metadata_fill.py  metadata_queries.py  models.py  normalizer.py  playlist_classifier.py  playlist_manager.py  playlist_utils.py  plsort.py  rate_limiter.py  realtime.py  result_utils.py  tasks.py  temperament_analyzer.py  track_metadata.py  web_enrichment.py  web_server.py  web_server_old.py
tests/: run_metadata_enrichment_test.py  test_apple_music_folder_structure.py  test_apple_music_structure.py  test_background_jobs.py  test_cli_ui.py  test_cover_art.py  test_curation_models.py  test_curation_service.py  test_curation_snapshot.py  test_curation_store.py  test_e2e.py  test_e2e.py.bak  test_enrich_once_hierarchy.py  test_integration.py  test_job_persistence.py  test_main_cli_platform.py  test_main_platform_guards.py  test_metadata_enrichment.py  test_metadata_enrichment_interactive.py  test_playlist_classifier.py  test_playlist_fuzzy_matching.py  test_playlist_manager.py  test_rate_limiting.py  test_realtime.py  test_temperament_analyzer_quick.py  test_web_server.py
web/: index.html
(+56 files in other folders)
