[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affective-playlists"
version = "1.0.0"
description = "Unified music analysis and organization tool for Apple Music"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joel Debeljak"}
]
keywords = ["music", "playlist", "ai", "metadata", "apple-music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/sokkohai/affective_playlists"
Documentation = "https://github.com/sokkohai/affective_playlists/blob/main/README.md"
Repository = "https://github.com/sokkohai/affective_playlists.git"
Issues = "https://github.com/sokkohai/affective_playlists/issues"

[project.scripts]
affective-playlists = "main:main"
affective_playlists = "main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
affective_playlists = ["src/**/*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
